@@ -41,7 +41,7 @@ char RawStr::nl = '\n';
 
 RawStr::RawStr(const char *ipath, int fileMode)
 {
-	char buf[127];
+	SWBuf buf;
 
 	lastoff = -1;
 	path = 0;
@@ -55,14 +55,14 @@ RawStr::RawStr(const char *ipath, int fileMode)
 		fileMode = O_RDWR;
 	}
 		
-	sprintf(buf, "%s.idx", path);
+	buf.setFormatted("%s.idx", path);
 	idxfd = FileMgr::getSystemFileMgr()->open(buf, fileMode|O_BINARY, true);
 
-	sprintf(buf, "%s.dat", path);
+	buf.setFormatted("%s.dat", path);
 	datfd = FileMgr::getSystemFileMgr()->open(buf, fileMode|O_BINARY, true);
 
 	if (datfd < 0) {
-		sprintf(buf, "Error: %d", errno);
+		buf.setFormatted("Error: %d", errno);
 		perror(buf);
 	}
 
